# AWOLAN

./: .bazelrc  .gitignore  .gitmodules  App.tsx  BUILD  MODULE.bazel  WORKSPACE  app.json  build.gradle  eas.json  package-lock.json  package.json  release-key.keystore  settings.gradle
AWOLAN/: app.json  package.json
AWOLAN/ios/: Podfile
AWOLAN/ios/HelloWorld.xcodeproj/: project.pbxproj
AWOLAN/ios/HelloWorld.xcodeproj/xcshareddata/xcschemes/: AWOLAN.xcscheme
android/: build.gradle  settings.gradle
android/app/: .keystore  build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/: appcenter-config.json
android/app/src/main/java/com/example/awolan/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
app/src/main/: BUILD
components/: BlurCard.tsx  CustomTabIcon.tsx
context/: BorderThemeName.tsx  DataContext.tsx  MusicContext.tsx  ThemeContext.tsx  WallpaperContext.tsx
navigation/: AppNavigator.tsx
screens/: AriamScreen.tsx  EventScreen.tsx  EventsScreen.tsx  ExpensesScreen.tsx  HomeScreen.tsx  SavingsScreen.tsx  SettingsScreen.tsx  VideoScreen.tsx
services/: storage.ts
src/components/: SplashScreen.js
utils/: notifications.ts  themeUtils.ts
